# embedded_drivers

./: README.md
mrf89xa/: Cargo.toml
mrf89xa/src/: config.rs  lib.rs  modem_config.rs  register.rs
rp2040-epd-touchscreen/: Cargo.toml  build.rs
rp2040-epd-touchscreen/.cargo/: config.toml
rp2040-epd-touchscreen/src/: epaper.rs  main.rs  setup.rs  touchpanel.rs
