[package]
name = "mrf89xa"
version = "0.1.0"
authors = ["Michael Kefeder <m.kefeder@gmail.com>"]
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
modular-bitfield = "0.11.2"
ufmt = "0.2.0"
heapless = { version = "0.7.16", features = ["ufmt-impl"] }
critical-section = "1.1.2"
defmt = "0.3.8"
