[package]
edition = "2021"
name = "rp2040-epd-touchscreen"
version = "0.1.1"
resolver = "2"

[dependencies]
cortex-m = "0.7.7"
#cortex-m-rt = "0.7.0"
rtic = { version = "2.1.1", features = ["thumbv6-backend"]}
rtic-monotonics = { version = "2.0.1", features = ["rp2040"]}
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.9.0"
embedded-graphics = "0.7.1"
#epd-waveshare = "0.5.0"
# until epd-waveshare v0.6.0 release use the merged fixes for epd2in9_v2 from current main
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare.git", rev = "3c3fdfd79f7fed12a8862e41057f4671819e5c96"}
heapless = {version = "0.7.16", features = ["ufmt-impl"]}
ufmt = "0.2.0"
rp2040-hal = "0.10.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
#lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
